src/App.css
html, body {
    height: 100%;
}

.App {
    background: url('/src/images/background.jpg') no-repeat center center fixed;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

.active {
    border-bottom: 3px solid yellow;
    font-weight: bold;
}

.content {
    color: white;
    text-align: center;
}

.details-container {
    height: 100vh;
}

.large-container {
    max-width: 1800px;
    margin: auto;
}

.transparent {
    background-color: rgba(0, 0, 0, 0.6);
}

.navbar-toggler {
    border-color: yellow;
    margin-right: 15px;
}

.card-footer {
    background-color: rgba(29, 6, 47, 0.8);
}

.details {
    width: 400px;
    height: auto;
}

.details > img {
    object-fit: cover;
}

.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    color: white;
    text-align: center;
    opacity: 0.5;
  }

@media screen and (max-width: 600px) {
    .details-container {
        max-width: 300px;
        margin: auto;
        height: 100%;
    }
}

